--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@
  
 <meta property="og:type" content="article"/>
 <meta property="og:description" content=""/>
-<meta property="og:title" content="About : "/>
+<meta property="og:title" content="About : shethchintan7.github.io"/>
 <meta property="og:site_name" content="Chintan Sheth"/>
 <meta property="og:image" content="" />
 <meta property="og:image:type" content="image/jpeg" />
@@ -33,7 +33,7 @@
 
 
 
-  <title> About &middot; Programming Oddities </title>
+  <title> About &middot; Chintan Sheth </title>
 
   
   <link rel="stylesheet" href="https://shethchintan7.github.io//css/poole.css">
