--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  
 <meta property="og:type" content="article"/>
 <meta property="og:description" content=""/>
-<meta property="og:title" content="Programming Oddities : "/>
+<meta property="og:title" content="Programming Oddities : shethchintan7.github.io"/>
 <meta property="og:site_name" content="Chintan Sheth"/>
 <meta property="og:image" content="" />
 <meta property="og:image:type" content="image/jpeg" />
@@ -30,7 +30,7 @@
 
 
 
-  <title> Programming Oddities &middot; Programming Oddities </title>
+  <title> Programming Oddities &middot; Chintan Sheth </title>
 
   
   <link rel="stylesheet" href="https://shethchintan7.github.io//css/poole.css">
